force-app/main/default/objects/Order/fields/Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether renewal reminder is enabled or not for sending notifications; used in automation workflows.</description>
    <inlineHelpText>Alert members about their membership expiration</inlineHelpText>
    <label>Renewal Reminder</label>
    <type>Checkbox</type>
</CustomField>