force-app/main/default/objects/Order/fields/Enrollment_Id__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Id__c</fullName>
    <description>Stores auto-calculated enrollment number comes from related order; used for tracking.</description>
    <label>Enrollment Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>