force-app/main/default/objects/Order/fields/Is_Created_From_flow__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_From_flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the order was created via flow/automation; used for process tracking.</description>
    <label>Is Created From flow</label>
    <type>Checkbox</type>
</CustomField>