force-app/main/default/objects/Order/fields/Membership_Term__c.field-meta.xml
<CustomField>
    <fullName>Membership_Term__c</fullName>
    <description>Stores membership term description; used for display and reporting.</description>
    <label>Membership Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>