force-app/main/default/objects/Order/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to membership type selected by users that which membership type we have to purchase; used to determine benefits, pricing, and rules.</description>
    <label>Membership Type</label>
    <referenceTo>Membership_Type__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>