force-app/main/default/objects/Order/fields/Non_Deductible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Non_Deductible_Amount__c</fullName>
    <description>Stores the non-tax-deductible portion of the order amount; used for compliance and reporting.</description>
    <label>Non-Deductible Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>