force-app/main/default/objects/Order/fields/OriginCategory__c.field-meta.xml
<CustomField>
    <fullName>OriginCategory__c</fullName>
    <description>Stores the category of origin; used for segmentation and analytics.</description>
    <label>Origin Category</label>
    <type>TextArea</type>
</CustomField>