force-app/main/default/objects/Order/fields/OriginDetail__c.field-meta.xml
<CustomField>
    <fullName>OriginDetail__c</fullName>
    <description>Stores detailed origin information; used for granular tracking and reporting. (stores some NEON data only)</description>
    <label>Origin Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>