force-app/main/default/objects/Order/fields/Parent_Order__c.field-meta.xml
<CustomField>
    <fullName>Parent_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Helps identify the original LP order that CP initially paid for but later stopped paying.</inlineHelpText>
    <label>Parent Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>