force-app/main/default/objects/Order/fields/Primary_Membership__c.field-meta.xml
<CustomField>
    <fullName>Primary_Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Membership</label>
    <referenceTo>Memberships__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>