force-app/main/default/objects/Order/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Stores the source of the order (e.g., web, Online Join); used for analytics and tracking. (stores some NEON data only)</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online Join</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>