force-app/main/default/objects/Order/fields/Tax_Deductible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Deductible_Amount__c</fullName>
    <description>Stores the tax-deductible portion of the order amount; used for compliance and receipt generation.</description>
    <label>Tax-Deductible Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>