force-app/main/default/objects/Order/fields/Term_Duration__c.field-meta.xml
<CustomField>
    <fullName>Term_Duration__c</fullName>
    <description>Defines the term duration (e.g., monthly, yearly); used for billing cycles.</description>
    <label>Term Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YEAR</fullName>
                <default>true</default>
                <label>YEAR</label>
            </value>
            <value>
                <fullName>MONTH</fullName>
            </value>
            <value>
                <fullName>DAY</fullName>
            </value>
            <value>
                <fullName>LIFE</fullName>
            </value>
            <value>
                <fullName>WEEK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>