force-app/main/default/objects/Order/fields/Term_Fee__c.field-meta.xml
<CustomField>
    <fullName>Term_Fee__c</fullName>
    <description>Stores the fee associated with the membership type that is selected; used for billing calculations.</description>
    <inlineHelpText>This field is auto calculated based on the term length and duration of the membership.
You will see the value in this field upon saving the record.</inlineHelpText>
    <label>Term Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>