force-app/main/default/objects/Order/fields/Term_Length__c.field-meta.xml
<CustomField>
    <fullName>Term_Length__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Stores the numeric length of the term; used for duration calculations.</description>
    <label>Term Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>