force-app/main/default/objects/Order/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <description>Stores the transaction date; used for financial tracking and reporting.</description>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>