force-app/main/default/objects/Order/fields/Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Status__c</fullName>
    <description>Stores the status of the transaction; used for financial and lifecycle tracking.</description>
    <label>Transaction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUCCEEDED</fullName>
            </value>
            <value>
                <fullName>REFUNDED</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>