force-app/main/default/objects/Order/validationRules/Order_End_Date_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_End_Date_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Account.Program_Type__c, &quot;Coordinating Program&quot;),
  ISBLANK(EndDate)
)</errorConditionFormula>
    <errorDisplayField>EndDate</errorDisplayField>
    <errorMessage>Please fill the order end date.</errorMessage>
</ValidationRule>