force-app/main/default/objects/Order/validationRules/Term_Duration_Set_to_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Term_Duration_Set_to_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Term_Length__c)),
    ISBLANK(TEXT(Term_Duration__c))
)</errorConditionFormula>
    <errorDisplayField>Term_Duration__c</errorDisplayField>
    <errorMessage>Please fill the Term Duration!</errorMessage>
</ValidationRule>